--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <style>
       body {
-        font-family: sans-serif;
         width: 300px;
         margin: 0;
-        padding: 10px;
       }
     </style>
   </head>
